<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/style_background_page" >

    <RelativeLayout
        style="@style/style_title"
        android:layout_width="match_parent" >

        <ImageView
            style="@style/style_title_back_btn"
            android:onClick="back" />

        <TextView
            style="@style/style_title_toptext"
            android:text="@string/edittitle" />

        <TextView
            style="@style/style_title_right_btn"
            android:clickable="true"
            android:onClick="toSubmit"
            android:text="@string/savebutton" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/top_condition"
            style="@style/style_background_page"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <LinearLayout style="@style/style_edit_item1" >

                <TextView
                    style="@style/style_edit_item2"
                    android:text="@string/goodname" />

                <EditText
                    android:id="@+id/good_title"
                    style="@style/style_edit_item3" />
            </LinearLayout>

            <LinearLayout style="@style/style_edit_item1">

                <TextView
                    style="@style/style_edit_item2"
                    android:text="商品分类" />

                <EditText
                    android:id="@+id/good_class"
                    style="@style/style_edit_item3"
                    android:editable="false"
                    android:focusable="false" />
            </LinearLayout>

            <LinearLayout style="@style/style_edit_item1" >

                <TextView
                    style="@style/style_edit_item2"
                    android:text="@string/goodprice" />

                <EditText
                    android:id="@+id/good_price"
                    style="@style/style_edit_item3"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout style="@style/style_edit_item1" >

                <TextView
                    style="@style/style_edit_item2"
                    android:text="@string/basissales" />

                <EditText
                    android:id="@+id/good_salesvolume"
                    style="@style/style_edit_item3"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                style="@style/style_edit_item1"
                android:layout_height="100dp"
                android:paddingRight="0dp" >

                <ImageView
                    android:id="@+id/upload_imageview"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/no_image_ico" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/good_upload_image"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:background="@color/blue"
                    android:onClick="upLoadImage"
                    android:text="@string/uploadimage"
                    android:textColor="@color/white2" />
            </LinearLayout>

            <LinearLayout style="@style/style_edit_item1" >

                <TextView
                    style="@style/style_edit_item2"
                    android:text="@string/goodinventory" />

                <EditText
                    android:id="@+id/good_inventory"
                    style="@style/style_edit_item3"
                    android:inputType="number" />
            </LinearLayout>

            <View style="@style/style_dividing_line" />

            <LinearLayout
                style="@style/style_edit_item1"
                android:layout_marginTop="0dp" >

                <TextView
                    style="@style/style_edit_item2"
                    android:text="@string/goodnumber" />

                <EditText
                    android:id="@+id/good_code"
                    style="@style/style_edit_item3" />
            </LinearLayout>

            <LinearLayout style="@style/style_edit_item1" >

                <TextView
                    style="@style/style_edit_item2"
                    android:text="@string/goodcount" />

                <RadioGroup
                    android:id="@+id/count_radiogroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/counttrue"
                        style="@style/style_radio_button"
                        android:checked="true"
                        android:text="@string/goodcountfalse" />

                    <RadioButton
                        android:id="@+id/countfalse"
                        style="@style/style_radio_button"
                        android:layout_marginLeft="10dp"
                        android:text="@string/goodcounttrue" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                style="@style/style_edit_item1"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/style_edit_item2"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    android:paddingTop="15dp"
                    android:text="@string/goodDescription" />

                <EditText
                    android:id="@+id/good_description"
                    style="@style/style_edit_item3"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="请填写..."
                    android:inputType="textMultiLine"
                    android:minHeight="100dp"
                    android:paddingTop="10dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>